Fix reveal ad css taregeting to prevent cls & remove whitespace

--- a/packages/global/scss/core.scss
+++ b/packages/global/scss/core.scss
@@ -710,31 +710,6 @@ label {
 /*! critical:end */
 
 /*! critical:start */
-/*! purgecss start ignore */
-// Prevent Reveal Ad from causing CLS
-// @TODO determin if this should be moved to @parameter1/base-cms-marko-web
-#marko-web-reveal-ad-handler {
-  display: none;
-}
-.reveal-ad {
-  height: 298px;
-  overflow: hidden;
-}
-body .ad-container--template-reskin-mobile {
-  // prevent layout shift & add 20px mb (298px + 20px)
-  display: none;
-  @media (max-width: 750px) {
-    min-height: 318px;
-    display: block;
-    &+ .document-container > .page:first-of-type {
-      margin-top: 0;
-    }
-  }
-}
-/*! purgecss end ignore */
-/*! critical:end */
-
-/*! critical:start */
 .site-menu {
   $self: &;
   top: $theme-site-navbar-logo-height-sm;
